Decreased width of sidebar. Fixed intro section's green background not fitting patriot logo on large screens.

--- a/assets/css/main-original.css
+++ b/assets/css/main-original.css
@@ -3293,7 +3293,7 @@
 	}
 
 		.wrapper > .inner {
-			padding: 5em 5em 3em 5em ;
+			padding: 5em 5em 3em 3em ;
 			max-width: 100%;
 			width: 75em;
 		}
@@ -3549,7 +3549,7 @@
 /* Wrapper (main) */
 
 	#sidebar + #wrapper {
-		margin-left: 18em;
+		margin-left: 16em;
 	}
 
 		@media screen and (max-width: 1280px) {
@@ -3576,7 +3576,7 @@
 /* Footer */
 
 	#sidebar + #wrapper + #footer {
-		margin-left: 18em;
+		margin-left: 16em;
 	}
 
 		@media screen and (max-width: 1280px) {
@@ -3617,7 +3617,7 @@
 		position: fixed;
 		text-align: right;
 		top: 0;
-		width: 18em;
+		width: 16em;
 		z-index: 10000;
 	}
 
